# ncdf

./: .gitmodules  Makefile  dist.sh  meson.build  meson_options.txt  setup.make  setup.sh
src/: meson.build  ncdf.sh
